--- a/src/hero.modules.css
+++ b/src/hero.modules.css
@@ -134,3 +134,30 @@
   stroke: rgba(0, 0, 0, .4);
   stroke-width: 1;
 }
+
+.ColorDot {
+  display: inline-block;
+
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  margin-right: 3px;
+}
+
+.ColorDotFlashing {
+  animation-name: animColorDotFlashing;
+  animation-duration: 1000ms;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in;
+}
+
+@keyframes animColorDotFlashing {
+  from {
+    opacity: 100%;
+  }
+
+  to {
+    opacity: 0%;
+  }
+}
