--- a/src/hero.modules.css
+++ b/src/hero.modules.css
@@ -59,6 +59,12 @@
   margin: 0 0 5px 0;
 }
 
+.chartText {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 10px;
+  font-weight: 400;
+}
+
 .chartSparkline > path {
   fill: none;
   stroke: #333;
